--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         
         {% if site.logo %}
-          <img src="images/dummy_logo.jpg" alt="data science portfolio logo">
+          <img src="images/dummy_logo.jpg">
         {% endif %}
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
